EXTRA_DIST = glusterfs.vol.sample glusterfsd.vol.sample glusterfs.8 mount.glusterfs.8\
	porting_guide.txt authentication.txt coding-standard.pdf get_put_api_using_xattr.txt \
	translator-options.txt mac-related-xattrs.txt replicate.pdf glusterd.vol gluster.8 \
        glusterd.8 glusterfsd.8

SUBDIRS = examples hacker-guide

voldir = $(sysconfdir)/glusterfs
vol_DATA = glusterfs.vol.sample glusterfsd.vol.sample glusterd.vol

man8_MANS = glusterfs.8 mount.glusterfs.8 gluster.8 glusterd.8 glusterfsd.8

CLEANFILES = 
