EXTRA_DIST = glusterfs.vol.sample glusterfsd.vol.sample glusterfs.8 mount.glusterfs.8\
	     glusterd.vol gluster.8 glusterd.8 glusterfsd.8

voldir = $(sysconfdir)/glusterfs
vol_DATA = glusterd.vol

# TODO: update man pages and uncomment this section
#man8_MANS = glusterfs.8 mount.glusterfs.8 gluster.8 glusterd.8 glusterfsd.8

CLEANFILES =
